# mc-server-dashboard-v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  compose.yaml
api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/migrations/: env.py  model_registry.py  script.py.mako
api/migrations/versions/: 0001_baseline.py  0002_identity.py  0003_brute_force.py  0004_community.py  0005_servers.py  0006_backups.py  0007_audit_log.py  0008_owner_audit_read_backfill.py  0009_server_game_port.py  0010_server_type_fabric.py  0011_player_groups.py  0011_user_active.py  0012_player_groups.py  0013_backup_source_uploaded.py  0014_refresh_token_reason.py  0015_backup_health.py  0016_relay_ingress.py  0016_server_store_generation.py  0017_game_session.py  0018_resource_packs.py  0018_server_plugins.py  0019_mods.py  0019_server_plugins.py  0020_server_mods.py  0020_server_plugin_sha256.py  0021_server_plugin_manifest.py  0022_server_plugin_side.py  0023_server_plugin_catalog_deps.py  0024_paper_plugin_side_server.py  0025_remove_server_type_spigot.py  0026_drop_execution_backend.py  0027_server_bedrock_port.py  0028_join_table_indexes.py  0029_schedules.py  0030_schedule_permissions.py  0031_retire_backup_interval.py  0032_server_backup_retention.py  0033_server_plugin_source_geyser.py  0034_game_session_source.py  0035_plugin_source_unknown.py  (+2 more)
api/src/mc_server_dashboard_api/: __init__.py  app.py  config.py  dependencies.py  docs.py  export_openapi.py  http_datetime.py  http_problem.py  integrity_sweep_cli.py  logging.py  middleware.py  webui.py
api/tests/: conftest.py  test_app_relay_config.py  test_config.py  test_conftest_xdist_controller.py  test_control_plane_stubs.py  test_docs_self_hosted.py  test_error_shape_guard.py  test_export_openapi.py  test_healthz.py  test_http_datetime.py  test_http_problem.py  test_integrity_sweep_cli.py  test_logging.py  test_metrics.py  test_placeholder.py  test_readyz.py  test_security_headers.py  test_shared_app_fixture.py  test_websocket_protocol.py  test_webui.py  test_ws_access_token.py
api/tests/audit/: fakes.py  test_audit_endpoints.py  test_list_audit_log.py  test_recorder.py  test_recording_coverage.py  test_writer.py
api/tests/benchmarks/: test_bench_domain.py  test_bench_endpoint.py  test_bench_validation.py
api/tests/community/: fakes.py  test_authz_dependencies.py  test_community_endpoints.py  test_entities.py  test_grant_endpoints.py  test_list_all_communities.py  test_lock_owner_query.py  test_manage_community.py  test_manage_grant.py  test_manage_membership.py  test_manage_role.py  test_me_endpoints.py  test_member_endpoints.py  test_membership_visibility.py  test_models_ddl.py  test_permission_ceiling.py  test_permission_checker.py  test_permissions_catalog.py  test_provision_community.py  test_read_my_permissions.py  test_role_endpoints.py  test_unit_of_work_translation.py  test_value_objects.py
api/tests/core/: test_check_health.py  test_check_readiness.py  test_create_engine_pool.py  test_database_ping.py  test_meta_endpoint.py  test_metrics_refresh.py  test_metrics_seams.py  test_readiness_adapter.py
api/tests/dataplane/: test_transfers_endpoint.py
api/tests/fleet/: fakes.py  test_community_events_endpoint.py  test_control_plane.py  test_control_plane_config.py  test_dataplane_commands.py  test_entities.py  test_events_endpoint.py  test_grpc_lifespan.py  test_grpc_session.py  test_grpc_tls.py  test_placement.py  test_real_time_events.py  test_registry.py  test_relay_service.py  test_relay_state.py  test_set_worker_drain.py  test_workers_endpoint.py
api/tests/identity/: fakes.py  test_admin_create_user.py  test_admin_delete_user.py  test_admin_users_endpoints.py  test_app_signing_key.py  test_auth_endpoints.py  test_authenticate_request.py  test_brute_force.py  test_change_password.py  test_client_ip.py  test_common_passwords.py  test_delete_account.py  test_entities.py  test_list_users.py  test_lock_active_platform_admins_query.py  test_login.py  test_login_failure_delay.py  test_logout.py  test_models_ddl.py  test_password_hasher.py  test_password_policy.py  test_prune_login_attempts.py  test_prune_login_attempts_loop.py  test_refresh_session.py  test_register_endpoint.py  test_register_user.py  test_restore_session.py  test_self_service_endpoints.py  test_session_endpoints.py  test_session_management.py  test_set_platform_admin.py  test_set_user_active.py  test_token_service.py  test_update_profile.py  test_value_objects.py
api/tests/integration/: README.md  conftest.py  migrate.py  scratch_db.py  test_audit_migration.py  test_audit_name_resolver.py  test_audit_store.py  test_auth_flow.py  test_backup_migration.py  test_backup_repositories.py  test_bedrock_tunnel_dispatch.py  test_community_membership.py  test_community_migration.py  test_community_owner_concurrency.py  test_community_provisioning.py  test_community_repositories.py  test_community_roles_grants.py  test_database_ping.py  test_events_ws_real_di.py  test_floodgate_slug_migration.py  test_game_session_migration.py  test_game_session_repositories.py  test_group_migration.py  test_group_repositories.py  test_identity_community_ownership.py  test_identity_last_admin_concurrency.py  test_identity_migration.py  test_identity_repositories.py  test_integrity_sweep.py  test_jar_references.py  test_lifecycle_lock_concurrency.py  test_lifecycle_repositories.py  test_lifecycle_scenarios.py  test_login_attempt_store.py  test_migration_metadata_sync.py  test_mod_migration.py  test_owner_audit_read_backfill.py  test_permission_checker.py  test_plugin_repositories.py  test_register_user.py  (+9 more)
api/tests/servers/: fakes.py  test_backup_author_directory_adapter.py  test_backup_endpoints.py  test_backup_loop.py  test_backup_models_ddl.py  test_backup_plugin_reconcile.py  test_backup_retention.py  test_backup_retention_use_cases.py  test_backup_schedule.py  test_backup_scheduler.py  test_backup_store_adapter.py  test_backups.py  test_bedrock_sweep.py  test_catalog.py  test_catalog_endpoints.py  test_files.py  (+87 more)
(+842 files in other folders)
