[project]
name = "mc-server-dashboard-api"
version = "0.0.0"
description = "Authoritative API service for mc-server-dashboard v2"
requires-python = ">=3.13,<3.14"
# Runtime dependencies needed by the generated control-plane stubs at import
# time. Ranges cap the next major (docs/dev/DEPENDENCIES.md Section 1); versions
# respect the 7-day cooldown (Section 3) at the time they were added.
dependencies = [
    # grpcio 1.80.0 (2026-03-30) and protobuf 6.x runtime for the generated
    # gRPC + message code. The protobuf major is bounded to 6 to match the
    # generator (grpcio-tools 1.80.0 emits protobuf-6 code). grpcio 1.81.0
    # (2026-06-01) is inside the 7-day cooldown as of this change, so cap below
    # it; lift the cap to <2 once it ages out (docs/dev/DEPENDENCIES.md §3).
    "grpcio>=1.80.0,<1.81",
    "protobuf>=6.31.1,<7",
    # API framework stack (ARCHITECTURE.md Section 7.4). 0.x libraries cap the
    # next minor; 1.x+/2.x cap the next major (docs/dev/DEPENDENCIES.md §1). All
    # versions respect the 7-day cooldown (Section 3): released on/before
    # 2026-05-28 as of this change.
    "fastapi>=0.136.3,<0.137",          # 2026-05-23
    "uvicorn>=0.48.0,<0.49",            # 2026-05-24
    "pydantic-settings>=2.14.1,<3",     # 2026-05-08
    # Persistence adapter: async SQLAlchemy over asyncpg, migrations via Alembic.
    "sqlalchemy[asyncio]>=2.0.50,<3",   # 2026-05-24
    "asyncpg>=0.31.0,<0.32",            # 2025-11-24
    "alembic>=1.18.4,<2",               # 2026-02-10
    # Password-hashing adapters behind the PasswordHasher Port (FR-AUTH-3,
    # CONFIGURATION.md Section 5.3). argon2 is the default selector; bcrypt is
    # the alternative. Both released well outside the 7-day cooldown (Section 3).
    "argon2-cffi>=25.1.0,<26",          # 2025-06-03
    "bcrypt>=5.0.0,<6",                 # 2025-09-25
    # JWT access-token signing/verification behind the TokenService Port
    # (FR-AUTH-2, CONFIGURATION.md Section 5.3). 2.13.0 (2026-05-21) is outside
    # the 7-day cooldown (Section 3); cap the next major.
    "pyjwt>=2.13.0,<3",                 # 2026-05-21
]

[dependency-groups]
# Dev / tooling dependencies: kept current, no upper bound
# (docs/dev/DEPENDENCIES.md Section 1). Versions respect the 7-day
# supply-chain cooldown (Section 3) at the time they were added.
dev = [
    # ruff 0.15.15 (2026-05-28) is inside the 7-day cooldown as of this
    # change; cap below it. Lift the cap once it ages out (Section 3).
    "ruff>=0.15.14,<0.15.15",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "import-linter>=2.11",
    # Control-plane codegen. grpcio-tools bundles protoc + the python/grpc
    # generators; mypy-protobuf adds .pyi type stubs. Both pinned outside the
    # cooldown (grpcio-tools 1.80.0 2026-03-30; mypy-protobuf 5.1.0 2026-04-28).
    "grpcio-tools>=1.80.0,<1.81",
    "mypy-protobuf>=5.1.0,<6",
    # ASGI transport for FastAPI's TestClient (exercises the app in-process,
    # no network). 0.28.1 (2024-12-06), outside the cooldown.
    "httpx>=0.28.1",
    # Async test support for pytest (async DB-probe + endpoint tests).
    # 1.4.0 (2026-05-26) is inside the 7-day cooldown as of this change; cap
    # below it. 1.3.0 (2025-11-10) is outside. Lift the cap once it ages out
    # (Section 3).
    "pytest-asyncio>=1.3.0,<1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The generated control-plane stubs live in the top-level `mcsd` package
# (mirroring the proto package `mcsd.controlplane.v1`); ship both packages.
[tool.hatch.build.targets.wheel]
packages = ["src/mc_server_dashboard_api", "src/mcsd"]

[tool.ruff]
src = ["src", "tests"]
# Generated gRPC stubs are not hand-written code; do not lint or format them.
extend-exclude = ["src/mcsd"]

[tool.ruff.lint]
# Conservative starter set: pyflakes, pycodestyle, isort.
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src", "tests"]
# Generated stubs (mypy-protobuf output) are excluded from strict checking;
# they are machine-generated and consumed via their own .pyi types.
exclude = ["^src/mcsd/"]

[[tool.mypy.overrides]]
module = "mcsd.*"
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_packages = ["mc_server_dashboard_api"]

# Import-direction enforcement (ARCHITECTURE.md Section 2.2). Each bounded
# context owns a domain / application / adapters / api quadrant; the layered
# contract below enforces the inward dependency rule per context. The edge
# (app factory, config, logging, middleware, dependencies) is the only place
# that may import adapters + application, and is excluded from the layered
# contracts. Add a new layered contract per context as contexts land.
[[tool.importlinter.contracts]]
name = "core context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.core.api",
    "mc_server_dashboard_api.core.application",
    "mc_server_dashboard_api.core.domain",
]
# `adapters` is deliberately NOT a layer here: it implements domain Ports and is
# bound to them only in the wiring module, so it must not be importable by
# application/api. The independence + forbidden contracts below pin that.

# Adapters must not be imported by domain or application (ARCHITECTURE.md 2.1).
[[tool.importlinter.contracts]]
name = "domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.core.domain",
    "mc_server_dashboard_api.core.application",
]
forbidden_modules = ["mc_server_dashboard_api.core.adapters"]

# Domain imports nothing internal (ARCHITECTURE.md 2.1: standard library only).
[[tool.importlinter.contracts]]
name = "domain imports nothing internal"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.core.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.core.application",
    "mc_server_dashboard_api.core.adapters",
    "mc_server_dashboard_api.core.api",
]

# --- identity context ------------------------------------------------------
# Mirrors the core context's shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge (bound to Ports only in the wiring module) and the domain
# dependency-free. The registration use case + HTTP edge land here with #55.
[[tool.importlinter.contracts]]
name = "identity context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.identity.api",
    "mc_server_dashboard_api.identity.application",
    "mc_server_dashboard_api.identity.domain",
]

# Adapters must not be imported by domain or application (ARCHITECTURE.md 2.1).
[[tool.importlinter.contracts]]
name = "identity domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.identity.domain",
    "mc_server_dashboard_api.identity.application",
]
forbidden_modules = ["mc_server_dashboard_api.identity.adapters"]

[[tool.importlinter.contracts]]
name = "identity domain imports nothing internal (incl. other contexts)"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.identity.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.identity.application",
    "mc_server_dashboard_api.identity.adapters",
    "mc_server_dashboard_api.identity.api",
    "mc_server_dashboard_api.core",
]
