[project]
name = "mc-server-dashboard-api"
version = "0.0.0"
description = "Authoritative API service for mc-server-dashboard v2"
requires-python = ">=3.13,<3.14"
# Runtime dependencies needed by the generated control-plane stubs at import
# time. Ranges cap the next major (docs/dev/DEPENDENCIES.md Section 1); versions
# respect the 7-day cooldown (Section 3) at the time they were added.
dependencies = [
    # grpcio 1.80.0 (2026-03-30) and protobuf 6.x runtime for the generated
    # gRPC + message code. The protobuf major is bounded to 6 to match the
    # generator (grpcio-tools 1.80.0 emits protobuf-6 code). grpcio 1.81.0
    # (2026-06-01) is inside the 7-day cooldown as of this change, so cap below
    # it; lift the cap to <2 once it ages out (docs/dev/DEPENDENCIES.md Section 3).
    "grpcio>=1.80.0,<1.83",
    "protobuf>=6.31.1,<7",
    # API framework stack (ARCHITECTURE.md Section 7.4). 0.x libraries cap the
    # next minor; 1.x+/2.x cap the next major (docs/dev/DEPENDENCIES.md Section 1). All
    # versions respect the 7-day cooldown (Section 3): released on/before
    # 2026-05-28 as of this change.
    "fastapi>=0.136.3,<0.140",          # 2026-05-23
    "uvicorn>=0.48.0,<0.52",            # 2026-05-24
    # WebSocket protocol implementation for uvicorn (#507). Bare uvicorn ships no
    # WS library, so its auto-selector resolves AutoWebSocketsProtocol to None and
    # silently downgrades every WS upgrade to plain HTTP — the live /events
    # sockets never handshake. `websockets` is the explicit single dependency
    # (over `uvicorn[standard]`, which would also drag in uvloop/httptools/
    # watchfiles we don't want); uvicorn 0.48 requires ``websockets>=10.4``. 16.0
    # (2026-01-10) is well outside the 7-day cooldown (Section 3); cap the next
    # major (Section 1).
    "websockets>=16.0,<17",             # 2026-01-10
    "pydantic-settings>=2.14.2,<3",     # 2026-06-19
    # FastAPI multipart parsing for the file-upload endpoint (issue #259):
    # ``UploadFile``/``Form`` need python-multipart. 0.0.x library, so the
    # standing cap is the next minor (Section 1); a tighter temporary cap holds
    # below the cooldown window. 0.0.30+ (2026-05-31 onward) is inside the 7-day
    # cooldown as of this change; 0.0.29 (2026-05-17) is outside. Lift the
    # temporary ``<0.0.30`` cap to ``<0.1`` once 0.0.30 ages out (Section 3).
    "python-multipart>=0.0.29,<0.0.33",  # 2026-05-17
    # Persistence adapter: async SQLAlchemy over asyncpg, migrations via Alembic.
    "sqlalchemy[asyncio]>=2.0.50,<3",   # 2026-05-24
    "asyncpg>=0.31.0,<0.32",            # 2025-11-24
    "alembic>=1.18.4,<2",               # 2026-02-10
    # Password-hashing adapters behind the PasswordHasher Port (FR-AUTH-3,
    # CONFIGURATION.md Section 5.3). argon2 is the default selector; bcrypt is
    # the alternative. Both released well outside the 7-day cooldown (Section 3).
    "argon2-cffi>=25.1.0,<26",          # 2025-06-03
    "bcrypt>=5.0.0,<6",                 # 2025-09-25
    # JWT access-token signing/verification behind the TokenService Port
    # (FR-AUTH-2, CONFIGURATION.md Section 5.3). 2.13.0 (2026-05-21) is outside
    # the 7-day cooldown (Section 3); cap the next major.
    "pyjwt>=2.13.0,<3",                 # 2026-05-21
    # Async S3-compatible client behind the object Storage adapter (STORAGE.md
    # Section 7.3, #105). aioboto3 wraps aiobotocore to give an asyncio S3 client
    # with streaming bodies and multipart upload (the bounded-memory hydrate /
    # snapshot transfer); it is confined to storage/adapters/object_client.py. 15.5.0
    # (2025-10-30) is well outside the 7-day cooldown (Section 3); cap the next
    # major. It ships no type stubs, handled by the mypy override below (the
    # grpcio precedent).
    "aioboto3>=15.5.0,<16",             # 2025-10-30
    # Async HTTP client behind the VersionCatalog / JAR-source and Modrinth
    # catalog adapters (ARCHITECTURE.md Section 7.3, FR-VER-2): fetch the Mojang /
    # PaperMC manifests, download the resolved JAR, and stream Modrinth downloads.
    # Confined to the adapters at the transport edge. This is the sole runtime HTTP
    # client (#1764 retired the prior httpx 0.28 pin): starlette's TestClient also
    # imports it under the `httpx2` name, and since runtime deps are installed in
    # the test env, no separate dev pin is needed. 2.5.0 (2026-06-25) is outside
    # the 7-day cooldown (Section 3); cap the next major.
    "httpx2>=2.5.0,<3",                 # 2026-06-25
    # Prometheus exposition + metric primitives behind the /metrics endpoint
    # (issue #282, NFR-OBS): the standard client library renders the text format
    # and provides the Counter/Histogram/Gauge primitives and the custom-collector
    # protocol the servers-by-state gauge uses. 0.25.0 (2026-04-09) is well outside
    # the 7-day cooldown (Section 3); cap the next minor (0.x, Section 1).
    "prometheus-client>=0.25.0,<0.26",  # 2026-04-09
    # Cron-expression engine behind the scheduler's NextRunCalculator Port
    # (epic #649, issue #1835): validates 5-field expressions and computes the
    # next occurrence with Debian-cron DST semantics. Confined to
    # servers/adapters/ (the domain stays stdlib-only; the import-linter
    # contract below pins that). 2.7 (2025-10-21) is well outside the 7-day
    # cooldown (Section 3); cap the next major.
    "cronsim>=2.7,<3",                  # 2025-10-21
]

[dependency-groups]
# Dev / tooling dependencies: kept current, no upper bound
# (docs/dev/DEPENDENCIES.md Section 1). Versions respect the 7-day
# supply-chain cooldown (Section 3) at the time they were added.
dev = [
    # ruff 0.15.15 (2026-05-28) is inside the 7-day cooldown as of this
    # change; cap below it. Lift the cap once it ages out (Section 3).
    "ruff>=0.15.14,<0.15.22",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "import-linter>=2.11",
    # Control-plane codegen. grpcio-tools bundles protoc + the python/grpc
    # generators; mypy-protobuf adds .pyi type stubs. Both pinned outside the
    # cooldown (grpcio-tools 1.80.0 2026-03-30; mypy-protobuf 5.1.0 2026-04-28).
    "grpcio-tools>=1.80.0,<1.83",
    "mypy-protobuf>=5.1.0,<6",
    # Async test support for pytest (async DB-probe + endpoint tests).
    # 1.4.0 (2026-05-26) is inside the 7-day cooldown as of this change; cap
    # below it. 1.3.0 (2025-11-10) is outside. Lift the cap once it ages out
    # (Section 3).
    "pytest-asyncio>=1.3.0,<1.5.0",
    # Suite-wide timeout safety net (#158): an unbounded await (e.g. a
    # wrongly-accepted gRPC session hanging call.code() forever, PR #153 review)
    # would otherwise hang the whole run. 2.4.0 (2025-05-05) is well outside the
    # 7-day cooldown (Section 3); cap the next major (dev tooling, Section 1).
    "pytest-timeout>=2.4.0,<3",
    # Coverage measurement for CI visibility (#325): `pytest --cov=src`. 7.1.0
    # (2026-03-21) is well outside the 7-day cooldown (Section 3); cap the next
    # major (dev tooling, Section 1).
    "pytest-cov>=7.1.0,<8",
    # Benchmark harness for `make bench-api` (issue #1122). 5.1.0 (2025-09-12)
    # is well outside the 7-day cooldown (Section 3); cap the next major (dev
    # tooling, Section 1).
    "pytest-benchmark>=5.1.0,<6",
    # Parallel test execution in CI (issue #1144). 3.6.1 (2024-12-28) is well
    # outside the 7-day cooldown (Section 3); cap the next major (dev tooling,
    # Section 1).
    "pytest-xdist>=3.6.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Security override: force setuptools past PYSEC-2026-3447 (fixed in 83.0.0).
# setuptools is transitive (via grpcio-tools), so it is pinned here as a
# resolution constraint rather than a direct dependency. Security fixes bypass
# the 7-day cooldown (docs/dev/DEPENDENCIES.md Section 3 / Section 4). Advisory:
# https://osv.dev/vulnerability/PYSEC-2026-3447.
constraint-dependencies = ["setuptools>=83.0.0"]

# The generated control-plane stubs live in the top-level `mcsd` package
# (mirroring the proto package `mcsd.controlplane.v1`); ship both packages.
[tool.hatch.build.targets.wheel]
packages = ["src/mc_server_dashboard_api", "src/mcsd"]

[tool.ruff]
src = ["src", "tests"]
# Generated gRPC stubs are not hand-written code; do not lint or format them.
extend-exclude = ["src/mcsd"]

[tool.ruff.lint]
# Conservative starter set: pyflakes, pycodestyle, isort.
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src", "tests"]
# test_migration_metadata_sync.py imports ``model_registry`` after a runtime
# ``sys.path.insert(.../migrations)``; exposing that dir lets mypy resolve and
# type-check the import regardless of invocation (``mypy .`` vs ``mypy src tests``).
mypy_path = ["migrations"]
# Generated stubs (mypy-protobuf output) are excluded from strict checking;
# they are machine-generated and consumed via their own .pyi types.
exclude = ["^src/mcsd/"]

[[tool.mypy.overrides]]
module = "mcsd.*"
follow_imports = "skip"

# grpcio ships no type stubs (the generated .pyi above type the messages; grpcio
# itself does not). Treat its imports as untyped so the control-plane adapter,
# which is the only module touching grpcio at the transport edge, type-checks
# without third-party stub packages.
[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

# aioboto3 / aiobotocore / botocore ship no type stubs. Treat their imports as
# untyped so the object client (storage/adapters/object_client.py) — the only
# module touching them at the transport edge — type-checks without third-party
# stub packages (the grpcio precedent above).
[[tool.mypy.overrides]]
module = ["aioboto3.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

# asyncpg ships no type stubs. The integration-test scratch-database helper
# (tests/integration/scratch_db.py) is the only module importing it directly —
# the app reaches asyncpg via SQLAlchemy's URL driver, not a Python import — so
# treat its imports as untyped (the grpcio / aioboto3 precedents above).
[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Suite-wide timeout safety net (#158, pytest-timeout). A per-test cap turns an
# unbounded await (a wrongly-accepted gRPC session hanging call.code() forever,
# PR #153 review) into a loud failure instead of a hung run. 120s is generous:
# the full suite runs ~75s in CI and the slowest DB-gated test is well under the
# cap, so this only fires on genuine hangs. The default "signal" method (SIGALRM
# on the main thread) is used deliberately: it interrupts the running coroutine
# and dumps a real traceback at the hang point. The "thread" method is avoided —
# it abandons the event loop from a watchdog thread, masking async-cleanup bugs.
# signal is the default on Linux (CI) and the main thread runs the asyncio loop,
# so SIGALRM lands where we want it.
addopts = "--timeout=120 --timeout-method=signal --benchmark-disable"

[tool.importlinter]
root_packages = ["mc_server_dashboard_api"]
# The fleet domain forbids importing external transport packages (grpc, the
# generated mcsd stubs); enforcing a forbidden contract on external modules
# requires graphing them.
include_external_packages = true

# Import-direction enforcement (ARCHITECTURE.md Section 2.2). Each bounded
# context owns a domain / application / adapters / api quadrant; the layered
# contract below enforces the inward dependency rule per context. The edge
# (app factory, config, logging, middleware, dependencies) is the only place
# that may import adapters + application, and is excluded from the layered
# contracts. Add a new layered contract per context as contexts land.
[[tool.importlinter.contracts]]
name = "core context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.core.api",
    "mc_server_dashboard_api.core.application",
    "mc_server_dashboard_api.core.domain",
]
# `adapters` is deliberately NOT a layer here: it implements domain Ports and is
# bound to them only in the wiring module, so it must not be importable by
# application/api. The independence + forbidden contracts below pin that.

# Adapters must not be imported by domain or application (ARCHITECTURE.md 2.1).
[[tool.importlinter.contracts]]
name = "domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.core.domain",
    "mc_server_dashboard_api.core.application",
]
forbidden_modules = ["mc_server_dashboard_api.core.adapters"]

# Domain imports nothing internal (ARCHITECTURE.md 2.1: standard library only).
[[tool.importlinter.contracts]]
name = "domain imports nothing internal"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.core.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.core.application",
    "mc_server_dashboard_api.core.adapters",
    "mc_server_dashboard_api.core.api",
]

# --- identity context ------------------------------------------------------
# Mirrors the core context's shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge (bound to Ports only in the wiring module) and the domain
# dependency-free. The registration use case + HTTP edge land here with #55.
[[tool.importlinter.contracts]]
name = "identity context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.identity.api",
    "mc_server_dashboard_api.identity.application",
    "mc_server_dashboard_api.identity.domain",
]

# Adapters must not be imported by domain or application (ARCHITECTURE.md 2.1).
[[tool.importlinter.contracts]]
name = "identity domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.identity.domain",
    "mc_server_dashboard_api.identity.application",
]
forbidden_modules = ["mc_server_dashboard_api.identity.adapters"]

[[tool.importlinter.contracts]]
name = "identity domain imports nothing internal (incl. other contexts)"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.identity.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.identity.application",
    "mc_server_dashboard_api.identity.adapters",
    "mc_server_dashboard_api.identity.api",
    "mc_server_dashboard_api.core",
]

# --- community context -----------------------------------------------------
# Mirrors the identity context's shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge (bound to Ports only in the wiring module) and the domain
# dependency-free — including no import of the identity domain (the user is
# referenced by id value only; DATABASE.md Section 5). The application/api
# quadrants land with the provisioning + management endpoints (#69).
[[tool.importlinter.contracts]]
name = "community context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.community.api",
    "mc_server_dashboard_api.community.application",
    "mc_server_dashboard_api.community.domain",
]

[[tool.importlinter.contracts]]
name = "community domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.community.domain",
    "mc_server_dashboard_api.community.application",
]
forbidden_modules = ["mc_server_dashboard_api.community.adapters"]

[[tool.importlinter.contracts]]
name = "community domain imports nothing internal (incl. other contexts)"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.community.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.community.adapters",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.core",
]

# --- fleet context ---------------------------------------------------------
# Mirrors the other contexts' shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge (the gRPC server + in-memory registry are bound to Ports
# only in the wiring module) and the domain dependency-free — including no
# import of grpcio, which lives only in the adapter at the transport edge.
[[tool.importlinter.contracts]]
name = "fleet context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.fleet.api",
    "mc_server_dashboard_api.fleet.application",
    "mc_server_dashboard_api.fleet.domain",
]

[[tool.importlinter.contracts]]
name = "fleet domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.fleet.domain",
    "mc_server_dashboard_api.fleet.application",
]
forbidden_modules = ["mc_server_dashboard_api.fleet.adapters"]

[[tool.importlinter.contracts]]
name = "fleet domain imports nothing internal (incl. other contexts) and no grpcio"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.fleet.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.fleet.adapters",
    "mc_server_dashboard_api.community",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.core",
    "grpc",
    "mcsd",
]

# --- servers context -------------------------------------------------------
# Mirrors the other contexts' shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge and the domain dependency-free — including no import of
# any other context (the owning community and the assigned worker are referenced
# by id value only, DATABASE.md Section 7; the backend enum is duplicated rather
# than imported from fleet). The server-delete grant sweep is composed at the
# adapter layer (the servers UnitOfWork reuses the community resource-grant
# adapter on one session), so the domain never reaches across. The player-groups
# slice (issue #276) lives inside this same context (servers.{domain,application,
# adapters,api}.groups), so it is covered by these contracts and adds none — the
# kept-contract count stays 23.
[[tool.importlinter.contracts]]
name = "servers context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.servers.api",
    "mc_server_dashboard_api.servers.application",
    "mc_server_dashboard_api.servers.domain",
]

[[tool.importlinter.contracts]]
name = "servers domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.servers.domain",
    "mc_server_dashboard_api.servers.application",
]
forbidden_modules = ["mc_server_dashboard_api.servers.adapters"]

[[tool.importlinter.contracts]]
name = "servers domain and application import no other context and no httpx2"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.servers.domain",
    "mc_server_dashboard_api.servers.application",
]
forbidden_modules = [
    "mc_server_dashboard_api.community",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.fleet",
    "mc_server_dashboard_api.storage",
    "mc_server_dashboard_api.core",
    # The scheduler's cron engine (issue #1835) lives only in the adapter
    # behind the NextRunCalculator Port; the domain stays stdlib-only (the
    # fleet-domain grpc precedent).
    "cronsim",
    # The modrinth catalog client's HTTP transport lib lives only in the
    # adapter (servers/adapters/modrinth_catalog.py), bound to the Port at the
    # edge; the domain/application stay transport-free (mirrors the versions
    # contract's httpx2 ban).
    "httpx2",
]

# --- storage context -------------------------------------------------------
# The storage context (#104) owns only domain + adapters in M1 (no application /
# api quadrant yet: the data-plane consumers land in later sub-issues of epic #8).
# So there is no layered contract to add yet; the forbidden contracts below keep
# the Storage adapter (filesystem code) at the edge — bound to the Port only in
# the wiring module — and the domain (the Port + value objects) dependency-free,
# including no import of any other context: Storage returns opaque keys/handles
# and never queries another context (STORAGE.md Section 1.1).
[[tool.importlinter.contracts]]
name = "storage domain does not import adapters"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.storage.domain"]
forbidden_modules = ["mc_server_dashboard_api.storage.adapters"]

[[tool.importlinter.contracts]]
name = "storage domain imports nothing internal (incl. other contexts)"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.storage.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.storage.adapters",
    "mc_server_dashboard_api.community",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.fleet",
    "mc_server_dashboard_api.servers",
    "mc_server_dashboard_api.core",
]

# --- versions context ------------------------------------------------------
# The VersionCatalog / JAR-source context (#118, ARCHITECTURE.md Section 5.1):
# domain (the Port + value objects) <- application (list + ensure-on-start) <- api
# (the catalog endpoints), with adapters (Mojang / PaperMC / httpx2 clients + the
# retry-cache wrapper) at the edge. The catalog is global (no community/server
# scope), so the domain/application import no other context — the JAR store is
# reached through the versions-owned ``JarPool`` seam, bound to the storage
# ``JarStore`` only at the adapter layer (the servers->fleet adapter precedent).
[[tool.importlinter.contracts]]
name = "versions context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.versions.api",
    "mc_server_dashboard_api.versions.application",
    "mc_server_dashboard_api.versions.domain",
]

[[tool.importlinter.contracts]]
name = "versions domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.versions.domain",
    "mc_server_dashboard_api.versions.application",
]
forbidden_modules = ["mc_server_dashboard_api.versions.adapters"]

[[tool.importlinter.contracts]]
name = "versions domain and application import no other context and no httpx2"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.versions.domain",
    "mc_server_dashboard_api.versions.application",
]
forbidden_modules = [
    "mc_server_dashboard_api.community",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.fleet",
    "mc_server_dashboard_api.servers",
    "mc_server_dashboard_api.storage",
    "mc_server_dashboard_api.core",
    "httpx2",
]

# --- audit context ---------------------------------------------------------
# Mirrors the other contexts' shape (ARCHITECTURE.md Section 2.2): a layered
# contract pins domain <- application <- api, and the forbidden contracts keep
# adapters at the edge (the SQLAlchemy AuditWriter / AuditQuery and the
# must-not-raise recorder are bound to Ports only in the wiring module) and the
# domain dependency-free, including no import of any other context (events,
# actor/community/target are plain id values; DATABASE.md Section 9). The audit
# *query* api imports the community domain's AuthUser/Permission to reuse the
# two-layer authorization seam at the edge, which the api layer is free to do.
[[tool.importlinter.contracts]]
name = "audit context layers (domain <- application <- api; adapters at the edge)"
type = "layers"
layers = [
    "mc_server_dashboard_api.audit.api",
    "mc_server_dashboard_api.audit.application",
    "mc_server_dashboard_api.audit.domain",
]

[[tool.importlinter.contracts]]
name = "audit domain and application do not import adapters"
type = "forbidden"
source_modules = [
    "mc_server_dashboard_api.audit.domain",
    "mc_server_dashboard_api.audit.application",
]
forbidden_modules = ["mc_server_dashboard_api.audit.adapters"]

[[tool.importlinter.contracts]]
name = "audit domain imports nothing internal (incl. other contexts)"
type = "forbidden"
source_modules = ["mc_server_dashboard_api.audit.domain"]
forbidden_modules = [
    "mc_server_dashboard_api.audit.adapters",
    "mc_server_dashboard_api.audit.application",
    "mc_server_dashboard_api.audit.api",
    "mc_server_dashboard_api.community",
    "mc_server_dashboard_api.identity",
    "mc_server_dashboard_api.fleet",
    "mc_server_dashboard_api.servers",
    "mc_server_dashboard_api.storage",
    "mc_server_dashboard_api.core",
]
